--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -9,4 +9,17 @@ user.roles=Roles
 user.active=Active
 user.registered=Registered
 meal.title=Meals
+meal.filter=Filter
+meal.date.from=From date (inclusive):
+meal.date.to=To date (inclusive):
+meal.time.from=From time (inclusive):
+meal.time.to=To time (exclusive):
+meal.date=Date/Time
+meal.description=Description
+meal.calories=Calories
+meal.add=Add meal
+meal.update=Edit meal
+meal.delete=Delete meal
 common.select=Select
+common.save=Save
+common.cancel=Cancel
