--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <junit.jupiter.version>5.8.2</junit.jupiter.version>
         <assertj.version>3.23.1</assertj.version>
         <hamcrest.version>2.2</hamcrest.version>
+        <json-path.version>2.7.0</json-path.version>
 
         <!--webjars-->
         <webjars-bootstrap.version>4.6.1</webjars-bootstrap.version>
@@ -336,7 +337,13 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${json-path.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!--        https://youtrack.jetbrains.com/issue/IDEA-231927  -->
         <dependency>
             <groupId>org.junit.platform</groupId>
